--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.4", features = ["derive"] }
 lazy_static = "1.4.0"
-pest = "2.2.1"
-pest_derive = "2.2.1"
+pest = "2.5.5"
+pest_derive = "2.5.5"
