--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.69"
 clap = { version = "4.1.4", features = ["derive"] }
 lazy_static = "1.4.0"
 regex = "1.7.1"
+thiserror = "1.0.50"
