--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 clap = { version = "4.1.4", features = ["derive"] }
+gxhash = "3.4.1"
 lazy_static = "1.4.0"
 regex = "1.7.1"
 thiserror = "1.0.50"
