--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ edition = "2021"
 anyhow = "1.0.69"
 clap = { version = "4.1.4", features = ["derive"] }
 gxhash = "3.4.1"
-lazy_static = "1.4.0"
-regex = "1.7.1"
 thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tracing-test = "0.2.5"
 
 [workspace]
 resolver = "2"
