--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  RUST_FLAGS: -c target-cpu=native
 
 jobs:
   build:
@@ -25,7 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Lint
-      run: cargo clippy --all -- -DWarnings
+      run: cargo clippy --all -- -Dwarnings
 
   format:
     runs-on: ubuntu-latest
