--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 clap = { version = "4.1.4", features = ["derive"] }
-gxhash = "3.4.1"
+# gxhash = "3.4.1"
 thiserror = "1.0.50"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
