--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,9 @@ name = "gb"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.69"
-clap = { version = "4.1.4", features = ["derive"] }
-# gxhash = "3.4.1"
 thiserror = "1.0.50"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-tracing-test = "0.2.5"
 
 [workspace]
 resolver = "2"
-members = [ 
+members = ["gbc_lex" 
 ]
